# python-project-83

./: .gitignore  README.md  build.sh  database.sql  makefile  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: index.html  index_hello.html  layout.html
