[project]
name = "hexlet-code"
version = "0.1.0"
description = "Third project hexlet school"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flack>=1.3.7",
    "gunicorn>=23.0.0",
    "lxml>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
